fix(unit-tests): fix issue with List.to, increase coverage